--- a/www.nass.gov.ng/56e731f90f4607df2a75946ac7ab3151ef4e3b34.yml
+++ b/www.nass.gov.ng/56e731f90f4607df2a75946ac7ab3151ef4e3b34.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 14 Jun 2017 21:13:36 GMT
+    - Fri, 16 Jun 2017 00:31:40 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=uKL75S5buRSP%2CSbZlZy%2C53; path=/
+    - PHPSESSID=Umn1VyW9rYEBVwB8zSJnT2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 14 Jun 2017 21:13:37 GMT
+recorded_at: Fri, 16 Jun 2017 00:31:40 GMT
