--- a/www.nass.gov.ng/0fb777aae6d6495f95d012e1a43fa9cb85220c22.yml
+++ b/www.nass.gov.ng/0fb777aae6d6495f95d012e1a43fa9cb85220c22.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 14 Jun 2017 21:17:26 GMT
+    - Fri, 16 Jun 2017 00:36:28 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=TKBYE3kKTsgPFM%2C2agUaJ0; path=/
+    - PHPSESSID=E3Xaybj8sc6aRIxvYw1uo0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 14 Jun 2017 21:17:26 GMT
+recorded_at: Fri, 16 Jun 2017 00:36:28 GMT
