--- a/www.nass.gov.ng/5cdd64b08d5a7e14740c538776e58c6f2f2177e5.yml
+++ b/www.nass.gov.ng/5cdd64b08d5a7e14740c538776e58c6f2f2177e5.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 14 Jun 2017 21:19:17 GMT
+    - Fri, 16 Jun 2017 00:39:04 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=U8A-GeeVvwuaz-6W5Jy%2CB2; path=/
+    - PHPSESSID=ebFOCD9LAnQlKcoaxc3eZ2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 14 Jun 2017 21:19:17 GMT
+recorded_at: Fri, 16 Jun 2017 00:39:04 GMT
