--- a/www.nass.gov.ng/f6d24be668f989ea976773116eb2315325ef1729.yml
+++ b/www.nass.gov.ng/f6d24be668f989ea976773116eb2315325ef1729.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 14 Jun 2017 21:20:01 GMT
+    - Fri, 16 Jun 2017 00:39:23 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=Ph3IS8Xo0VgVO2l0n87P-0; path=/
+    - PHPSESSID=hTSee5Cem6zb%2CQpCbojpW1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 14 Jun 2017 21:20:01 GMT
+recorded_at: Fri, 16 Jun 2017 00:39:23 GMT
