--- a/www.nass.gov.ng/ef6b18214d01ed0a918c52c26cb93865acf3ee63.yml
+++ b/www.nass.gov.ng/ef6b18214d01ed0a918c52c26cb93865acf3ee63.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 14 Jun 2017 21:22:54 GMT
+    - Fri, 16 Jun 2017 00:41:21 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=Kpw525zzd6Q1iFlNK6j%2CQ3; path=/
+    - PHPSESSID=PjKiHH2iAQBg-%2ClZ6v1mi1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 14 Jun 2017 21:22:54 GMT
+recorded_at: Fri, 16 Jun 2017 00:41:21 GMT
