--- a/www.nass.gov.ng/028af9b422af9b733405780740bb40d295e9294b.yml
+++ b/www.nass.gov.ng/028af9b422af9b733405780740bb40d295e9294b.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 14 Jun 2017 21:23:46 GMT
+    - Fri, 16 Jun 2017 00:43:32 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=UiaagTM%2Cn2fWByGE6B48d0; path=/
+    - PHPSESSID=TXG6H03QUGrTx04xcXcPC0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 14 Jun 2017 21:23:46 GMT
+recorded_at: Fri, 16 Jun 2017 00:43:32 GMT
