--- a/www.nass.gov.ng/ebeff1e82e823cabc89e7ee4ace8853c18ae2049.yml
+++ b/www.nass.gov.ng/ebeff1e82e823cabc89e7ee4ace8853c18ae2049.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 14 Jun 2017 21:24:25 GMT
+    - Fri, 16 Jun 2017 00:44:30 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=pjfRY1heS%2CQmc0BwkH8tR1; path=/
+    - PHPSESSID=RpW%2Cb2aO5VMapU2i23woq3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 14 Jun 2017 21:24:25 GMT
+recorded_at: Fri, 16 Jun 2017 00:44:30 GMT
