--- a/www.nass.gov.ng/789716f7bb84c252de8b0ab1c4e946956f8b8ac9.yml
+++ b/www.nass.gov.ng/789716f7bb84c252de8b0ab1c4e946956f8b8ac9.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 14 Jun 2017 21:28:47 GMT
+    - Fri, 16 Jun 2017 00:46:52 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=%2CEbwSySeYsisyrjRcjOCc1; path=/
+    - PHPSESSID=GtqTrnGSSLHck6c9UmGK41; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 14 Jun 2017 21:28:47 GMT
+recorded_at: Fri, 16 Jun 2017 00:46:52 GMT
