--- a/www.nass.gov.ng/544be6cf838e69f388b3499dba7cf0c671d9a0bb.yml
+++ b/www.nass.gov.ng/544be6cf838e69f388b3499dba7cf0c671d9a0bb.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 14 Jun 2017 21:30:22 GMT
+    - Fri, 16 Jun 2017 00:49:32 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=w8YhNXO9wz6ubg8%2CF6Rwh0; path=/
+    - PHPSESSID=dfH8Vm-uO6y1RbTnTmMit1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 14 Jun 2017 21:30:22 GMT
+recorded_at: Fri, 16 Jun 2017 00:49:32 GMT
