--- a/www.nass.gov.ng/6db5a2bc0af7170cdebca52b95c38a429d630165.yml
+++ b/www.nass.gov.ng/6db5a2bc0af7170cdebca52b95c38a429d630165.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 14 Jun 2017 21:32:35 GMT
+    - Fri, 16 Jun 2017 00:51:21 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=d%2CpE2zOsVupShDoMsJRYw3; path=/
+    - PHPSESSID=tTHgMguOnAoaRRHWjpvWW1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 14 Jun 2017 21:32:35 GMT
+recorded_at: Fri, 16 Jun 2017 00:51:21 GMT
