--- a/www.nass.gov.ng/759dfaafa03b20bb35c0feda45c2088075e75818.yml
+++ b/www.nass.gov.ng/759dfaafa03b20bb35c0feda45c2088075e75818.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 14 Jun 2017 21:33:09 GMT
+    - Fri, 16 Jun 2017 00:51:40 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=%2CAYz2fcmvU13zNbbhOZse2; path=/
+    - PHPSESSID=bXackoA2KXLxFz4-TBGZP0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 14 Jun 2017 21:33:09 GMT
+recorded_at: Fri, 16 Jun 2017 00:51:40 GMT
