--- a/www.nass.gov.ng/735bf46098ada07ab0f2c0e11f8aeaff886cd56c.yml
+++ b/www.nass.gov.ng/735bf46098ada07ab0f2c0e11f8aeaff886cd56c.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 14 Jun 2017 21:33:58 GMT
+    - Fri, 16 Jun 2017 00:52:49 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=RZ%2CdgmDOxOCkpIynq4eYY2; path=/
+    - PHPSESSID=I3C7hIYGXJ7mUzbZSfAbt0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 14 Jun 2017 21:33:58 GMT
+recorded_at: Fri, 16 Jun 2017 00:52:49 GMT
