--- a/www.nass.gov.ng/27c4d49997cf5306e3f44fa62d57ab70609ab9a8.yml
+++ b/www.nass.gov.ng/27c4d49997cf5306e3f44fa62d57ab70609ab9a8.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 14 Jun 2017 21:35:41 GMT
+    - Fri, 16 Jun 2017 00:54:01 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=wuq7A4aYL%2CVxvrZGjAF1f1; path=/
+    - PHPSESSID=qkv43KaxvQ2jHP6aX-h-G1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 14 Jun 2017 21:35:41 GMT
+recorded_at: Fri, 16 Jun 2017 00:54:01 GMT
