--- a/www.nass.gov.ng/b76fdd5046c8cbe0639c340d8143c06313457195.yml
+++ b/www.nass.gov.ng/b76fdd5046c8cbe0639c340d8143c06313457195.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 14 Jun 2017 21:38:27 GMT
+    - Fri, 16 Jun 2017 00:57:47 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=ixB%2CJoJRwn3C8z9566iiY3; path=/
+    - PHPSESSID=YOzxlsf4gTwHocCmnl-kd3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 14 Jun 2017 21:38:27 GMT
+recorded_at: Fri, 16 Jun 2017 00:57:47 GMT
