--- a/www.nass.gov.ng/9de9b50a4d49ca996200d3c6a75c2c0d96731d99.yml
+++ b/www.nass.gov.ng/9de9b50a4d49ca996200d3c6a75c2c0d96731d99.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 14 Jun 2017 21:39:03 GMT
+    - Fri, 16 Jun 2017 00:58:29 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=tWVGndwZjJgAg-EeACzWq2; path=/
+    - PHPSESSID=o%2CecjJyzc8jq3GNR%2CgdlD2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 14 Jun 2017 21:39:03 GMT
+recorded_at: Fri, 16 Jun 2017 00:58:29 GMT
