--- a/www.nass.gov.ng/dbf681fc65afbc514df45b82197fd71941b22451.yml
+++ b/www.nass.gov.ng/dbf681fc65afbc514df45b82197fd71941b22451.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 14 Jun 2017 21:42:29 GMT
+    - Fri, 16 Jun 2017 01:01:50 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=cBCnAyTh5%2CQHMl5oCbYve0; path=/
+    - PHPSESSID=MvrP2RC7bktOb4th3ytlp2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 14 Jun 2017 21:42:29 GMT
+recorded_at: Fri, 16 Jun 2017 01:01:50 GMT
