--- a/www.nass.gov.ng/a73d4e72eaa91d46355e63b83864f888e00e10f3.yml
+++ b/www.nass.gov.ng/a73d4e72eaa91d46355e63b83864f888e00e10f3.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 14 Jun 2017 21:43:34 GMT
+    - Fri, 16 Jun 2017 01:02:35 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=hlelGJj4jjy0jxleiQt743; path=/
+    - PHPSESSID=eM6G%2CNOoIGPDBruT%2CMhg51; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 14 Jun 2017 21:43:34 GMT
+recorded_at: Fri, 16 Jun 2017 01:02:35 GMT
