--- a/www.nass.gov.ng/ab4a2e078f74117aac5ca20280e5030e1a01226a.yml
+++ b/www.nass.gov.ng/ab4a2e078f74117aac5ca20280e5030e1a01226a.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 14 Jun 2017 21:46:12 GMT
+    - Fri, 16 Jun 2017 01:05:48 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=bZkg1TjuMAIkAMJ6hP-Rn0; path=/
+    - PHPSESSID=AzyPf3jb%2COVsOfMJtgvrN0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 14 Jun 2017 21:46:13 GMT
+recorded_at: Fri, 16 Jun 2017 01:05:48 GMT
