--- a/www.nass.gov.ng/aa84141d30f5a6828bc5a5c4a11f70841ac0f2a4.yml
+++ b/www.nass.gov.ng/aa84141d30f5a6828bc5a5c4a11f70841ac0f2a4.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 14 Jun 2017 21:47:09 GMT
+    - Fri, 16 Jun 2017 01:07:01 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=hGcLbPC%2CBuPi2tQo9%2Cy1K3; path=/
+    - PHPSESSID=F6DNQdhiPVvDA7K-UtiZM3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 14 Jun 2017 21:47:09 GMT
+recorded_at: Fri, 16 Jun 2017 01:07:01 GMT
