--- a/www.nass.gov.ng/d8982cee78527514c80bc51b642093fd5c1c42f9.yml
+++ b/www.nass.gov.ng/d8982cee78527514c80bc51b642093fd5c1c42f9.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 14 Jun 2017 21:50:35 GMT
+    - Fri, 16 Jun 2017 01:10:04 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=Ib2NWMQOQqAv0Ia8Cmp1g3; path=/
+    - PHPSESSID=neC6vdUX%2CtZRDz745yRjF0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 14 Jun 2017 21:50:35 GMT
+recorded_at: Fri, 16 Jun 2017 01:10:04 GMT
