--- a/www.nass.gov.ng/7a10b94266473e7a419564fb90372a09bf207570.yml
+++ b/www.nass.gov.ng/7a10b94266473e7a419564fb90372a09bf207570.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 14 Jun 2017 21:54:36 GMT
+    - Fri, 16 Jun 2017 01:13:43 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=x7zmCVQpj2VMLiEBl9HnH0; path=/
+    - PHPSESSID=QriMP4XzNxs9NmuDNsz%2Cw1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 14 Jun 2017 21:54:36 GMT
+recorded_at: Fri, 16 Jun 2017 01:13:43 GMT
