--- a/www.nass.gov.ng/b18c09e3c2ef2fc2d474551ec05d9fac869cfe93.yml
+++ b/www.nass.gov.ng/b18c09e3c2ef2fc2d474551ec05d9fac869cfe93.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 14 Jun 2017 21:56:07 GMT
+    - Fri, 16 Jun 2017 01:15:25 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=sGNQtVpQ%2CaqwT8MeKuIxj1; path=/
+    - PHPSESSID=4SHVPGZf4euP-%2CKOunwWb0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 14 Jun 2017 21:56:07 GMT
+recorded_at: Fri, 16 Jun 2017 01:15:25 GMT
