--- a/www.nass.gov.ng/87ed6fef455ee412354ef09e133986d3897e7aaf.yml
+++ b/www.nass.gov.ng/87ed6fef455ee412354ef09e133986d3897e7aaf.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 14 Jun 2017 21:57:52 GMT
+    - Fri, 16 Jun 2017 01:16:50 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=WiM4nLYG7SnT%2CDHl51w5z0; path=/
+    - PHPSESSID=ZS3O7QXR7M5k3IH-EKkVo1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 14 Jun 2017 21:57:52 GMT
+recorded_at: Fri, 16 Jun 2017 01:16:50 GMT
