--- a/www.nass.gov.ng/1306e95b56608c7d6d929e981b2412a55320b561.yml
+++ b/www.nass.gov.ng/1306e95b56608c7d6d929e981b2412a55320b561.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 14 Jun 2017 21:58:55 GMT
+    - Fri, 16 Jun 2017 01:17:39 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=snfuqLDgtqwvmzZfub%2CvA3; path=/
+    - PHPSESSID=bkCYCdE7HcW7l0%2CqaMZLL1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 14 Jun 2017 21:58:55 GMT
+recorded_at: Fri, 16 Jun 2017 01:17:39 GMT
