--- a/www.nass.gov.ng/43f806c1cda4d53d8a52ec8c0209af0409627a65.yml
+++ b/www.nass.gov.ng/43f806c1cda4d53d8a52ec8c0209af0409627a65.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 14 Jun 2017 22:02:19 GMT
+    - Fri, 16 Jun 2017 01:19:40 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=bbt-gj6xSjOzDPKkBbV7l2; path=/
+    - PHPSESSID=ejRG1naEWh%2CZaVtbIX02p2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 14 Jun 2017 22:02:19 GMT
+recorded_at: Fri, 16 Jun 2017 01:19:40 GMT
