--- a/www.nass.gov.ng/a3039e7135952a1b51c43426e6c82a9064c4bed3.yml
+++ b/www.nass.gov.ng/a3039e7135952a1b51c43426e6c82a9064c4bed3.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 14 Jun 2017 22:04:11 GMT
+    - Fri, 16 Jun 2017 01:21:30 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=X9J6VrmYaOIaWTH9-arnr0; path=/
+    - PHPSESSID=wXgMp-K%2Cym0CTgzrm2YBw2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 14 Jun 2017 22:04:11 GMT
+recorded_at: Fri, 16 Jun 2017 01:21:30 GMT
