--- a/www.nass.gov.ng/c281ad9139192942b0886c51466c6460900e50c0.yml
+++ b/www.nass.gov.ng/c281ad9139192942b0886c51466c6460900e50c0.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 14 Jun 2017 22:04:58 GMT
+    - Fri, 16 Jun 2017 01:21:53 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=iR6uwF-Lny2mZUJj8HxI%2C1; path=/
+    - PHPSESSID=X6TjGKrL3hDToDl5w4r2i1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 14 Jun 2017 22:04:58 GMT
+recorded_at: Fri, 16 Jun 2017 01:21:53 GMT
