--- a/www.nass.gov.ng/bf819e1769570b6dcb0d09baedacd4f3b5b752a5.yml
+++ b/www.nass.gov.ng/bf819e1769570b6dcb0d09baedacd4f3b5b752a5.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 14 Jun 2017 22:07:48 GMT
+    - Fri, 16 Jun 2017 01:25:15 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=LIqZuc%2CqHh1EyELz%2C%2Cvnq1; path=/
+    - PHPSESSID=5U4r2YOyT%2CsMkR-aQaIKc1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 14 Jun 2017 22:07:48 GMT
+recorded_at: Fri, 16 Jun 2017 01:25:15 GMT
