--- a/www.nass.gov.ng/b8e54a41f48c28ee816d37c2fa77504f144d0fcd.yml
+++ b/www.nass.gov.ng/b8e54a41f48c28ee816d37c2fa77504f144d0fcd.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 14 Jun 2017 22:08:24 GMT
+    - Fri, 16 Jun 2017 01:25:34 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=ZdCYYs9pODoYe21g%2CpsxX1; path=/
+    - PHPSESSID=rcg89yYOprvIFV7sEQTFl3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 14 Jun 2017 22:08:24 GMT
+recorded_at: Fri, 16 Jun 2017 01:25:35 GMT
