--- a/www.nass.gov.ng/8821244c61cd70440d2ed0fdd828dae0bf200cae.yml
+++ b/www.nass.gov.ng/8821244c61cd70440d2ed0fdd828dae0bf200cae.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 14 Jun 2017 22:09:46 GMT
+    - Fri, 16 Jun 2017 01:27:27 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=5f8LElsbA9r2byY58k%2CS43; path=/
+    - PHPSESSID=AqmrXhfnnR%2CiniLtKQAs70; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 14 Jun 2017 22:09:46 GMT
+recorded_at: Fri, 16 Jun 2017 01:27:27 GMT
