--- a/www.nass.gov.ng/fb0624306c824eed4c7bd4e213daa9d7262b00df.yml
+++ b/www.nass.gov.ng/fb0624306c824eed4c7bd4e213daa9d7262b00df.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 14 Jun 2017 22:10:03 GMT
+    - Fri, 16 Jun 2017 01:28:29 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=ALnqNsw%2CHkrI20okI6qAD3; path=/
+    - PHPSESSID=NrkOrR6V77kKzq7QRQpS61; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 14 Jun 2017 22:10:03 GMT
+recorded_at: Fri, 16 Jun 2017 01:28:29 GMT
