--- a/www.nass.gov.ng/2acbe05d387e5796acf40f0cde81ab2ad40ea3f6.yml
+++ b/www.nass.gov.ng/2acbe05d387e5796acf40f0cde81ab2ad40ea3f6.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 14 Jun 2017 22:10:22 GMT
+    - Fri, 16 Jun 2017 01:28:48 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=Co0Srkyl88K5J7Aojw9rY2; path=/
+    - PHPSESSID=1Iptm4dgijlNflqlTutP%2C0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 14 Jun 2017 22:10:22 GMT
+recorded_at: Fri, 16 Jun 2017 01:28:48 GMT
