--- a/www.nass.gov.ng/b5e484d0568d920fb05c4be6375ddfd0c8326adb.yml
+++ b/www.nass.gov.ng/b5e484d0568d920fb05c4be6375ddfd0c8326adb.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 14 Jun 2017 22:11:26 GMT
+    - Fri, 16 Jun 2017 01:29:51 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=75X5wdH9sDLWTbUmJjKaz1; path=/
+    - PHPSESSID=%2Cow8OIMZ4zRo8tRu%2CEcsp0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 14 Jun 2017 22:11:26 GMT
+recorded_at: Fri, 16 Jun 2017 01:29:51 GMT
