--- a/www.nass.gov.ng/d2c04effacc8f30354acd148d637b328fd9258cc.yml
+++ b/www.nass.gov.ng/d2c04effacc8f30354acd148d637b328fd9258cc.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 14 Jun 2017 22:13:36 GMT
+    - Fri, 16 Jun 2017 01:31:30 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=9OT%2CI846vTYq5PEvhqleG3; path=/
+    - PHPSESSID=v-lDEcRsLALqRXeVCMaGw2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 14 Jun 2017 22:13:36 GMT
+recorded_at: Fri, 16 Jun 2017 01:31:30 GMT
