--- a/www.nass.gov.ng/145f3ffb5152f0431e54ec13ae70c3fb3095cb6a.yml
+++ b/www.nass.gov.ng/145f3ffb5152f0431e54ec13ae70c3fb3095cb6a.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 14 Jun 2017 22:16:17 GMT
+    - Fri, 16 Jun 2017 01:34:17 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=-JUFpC3NnGKmSp%2CwcTasb0; path=/
+    - PHPSESSID=N-r9ByE-aweCGwz2XzARP1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 14 Jun 2017 22:16:17 GMT
+recorded_at: Fri, 16 Jun 2017 01:34:17 GMT
