--- a/www.nass.gov.ng/7a2da2d9faeade71beb122830caf9f7f9fc82888.yml
+++ b/www.nass.gov.ng/7a2da2d9faeade71beb122830caf9f7f9fc82888.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 14 Jun 2017 22:16:38 GMT
+    - Fri, 16 Jun 2017 01:35:18 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=GDZUMGn%2CYyTjFk-A-74243; path=/
+    - PHPSESSID=wDGeggxgXqw5wAtBptHye2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 14 Jun 2017 22:16:38 GMT
+recorded_at: Fri, 16 Jun 2017 01:35:18 GMT
