--- a/www.nass.gov.ng/04d8f6dd15370759a45b75b08eaf224bb1008f86.yml
+++ b/www.nass.gov.ng/04d8f6dd15370759a45b75b08eaf224bb1008f86.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 14 Jun 2017 22:19:36 GMT
+    - Fri, 16 Jun 2017 01:38:21 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=MvR2TJbonXug3qs04-84H3; path=/
+    - PHPSESSID=HCZKDIQorVRl2jcv%2CQdax1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 14 Jun 2017 22:19:37 GMT
+recorded_at: Fri, 16 Jun 2017 01:38:22 GMT
