--- a/www.nass.gov.ng/1fbfad4aabf2a147283758ff8eeaafbd779daf1d.yml
+++ b/www.nass.gov.ng/1fbfad4aabf2a147283758ff8eeaafbd779daf1d.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 14 Jun 2017 22:19:55 GMT
+    - Fri, 16 Jun 2017 01:38:38 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=mjKDb2ItMyuhJ64673hci2; path=/
+    - PHPSESSID=st%2CvgNiNChUaoXlTX3MU03; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 14 Jun 2017 22:19:55 GMT
+recorded_at: Fri, 16 Jun 2017 01:38:38 GMT
