--- a/www.nass.gov.ng/7b3be567cf092467a5cc1620097fe477fbd410aa.yml
+++ b/www.nass.gov.ng/7b3be567cf092467a5cc1620097fe477fbd410aa.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 14 Jun 2017 22:23:09 GMT
+    - Fri, 16 Jun 2017 01:42:18 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=6Iv8RN5seWGeKTq%2CExFgZ3; path=/
+    - PHPSESSID=yTb-rOG524zVojiXm4gFL0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 14 Jun 2017 22:23:09 GMT
+recorded_at: Fri, 16 Jun 2017 01:42:18 GMT
