--- a/www.nass.gov.ng/a84a3e66b0e40e33140ccd91ff159e8589a0a5f4.yml
+++ b/www.nass.gov.ng/a84a3e66b0e40e33140ccd91ff159e8589a0a5f4.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 14 Jun 2017 22:27:53 GMT
+    - Fri, 16 Jun 2017 01:46:12 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=5sfO1aexVaO3vYFSTRxoB2; path=/
+    - PHPSESSID=ZlAIgfr6QU2bpyRAlq1%2CS2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 14 Jun 2017 22:27:53 GMT
+recorded_at: Fri, 16 Jun 2017 01:46:12 GMT
