--- a/www.nass.gov.ng/d7457242767a46d35dbe6eead2d3a9cf49146446.yml
+++ b/www.nass.gov.ng/d7457242767a46d35dbe6eead2d3a9cf49146446.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 14 Jun 2017 22:28:43 GMT
+    - Fri, 16 Jun 2017 01:46:32 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=PvPtjlGA6FEXC2YN8vNnd2; path=/
+    - PHPSESSID=A%2CIiG9Dpq7SPYHefHpacL2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 14 Jun 2017 22:28:43 GMT
+recorded_at: Fri, 16 Jun 2017 01:46:32 GMT
