--- a/www.nass.gov.ng/d0e59834d6b9ae93023fe8fc802e296d49ae653d.yml
+++ b/www.nass.gov.ng/d0e59834d6b9ae93023fe8fc802e296d49ae653d.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 14 Jun 2017 22:31:06 GMT
+    - Fri, 16 Jun 2017 01:48:30 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=W1RxOMKiXnzi24-Da46vG2; path=/
+    - PHPSESSID=6%2CRl79lHFj1NWqvVB52WH3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 14 Jun 2017 22:31:07 GMT
+recorded_at: Fri, 16 Jun 2017 01:48:30 GMT
