--- a/www.nass.gov.ng/afcea8f052546e3ebb2f6c98c8bd09d3bee9ba66.yml
+++ b/www.nass.gov.ng/afcea8f052546e3ebb2f6c98c8bd09d3bee9ba66.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 14 Jun 2017 22:31:25 GMT
+    - Fri, 16 Jun 2017 01:48:51 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=HUBUrtuvkAAmRHhe8kl5B0; path=/
+    - PHPSESSID=6iIOVU8JnPTH7J%2CCxUb%2C71; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 14 Jun 2017 22:31:25 GMT
+recorded_at: Fri, 16 Jun 2017 01:48:52 GMT
