--- a/www.nass.gov.ng/94c3570771f5399a6981a5a77139ac7d70644d3b.yml
+++ b/www.nass.gov.ng/94c3570771f5399a6981a5a77139ac7d70644d3b.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 14 Jun 2017 22:33:15 GMT
+    - Fri, 16 Jun 2017 01:51:31 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=CCt1l7CKY2aWzF8FRTvlY0; path=/
+    - PHPSESSID=2GaRZsxU5Z0q5g%2C465Pv61; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 14 Jun 2017 22:33:16 GMT
+recorded_at: Fri, 16 Jun 2017 01:51:31 GMT
