--- a/www.nass.gov.ng/1b7d16e778e730dd5c77aaf603cf1029fe089e46.yml
+++ b/www.nass.gov.ng/1b7d16e778e730dd5c77aaf603cf1029fe089e46.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 14 Jun 2017 22:38:20 GMT
+    - Fri, 16 Jun 2017 01:57:25 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=RDFu4ttdyDhx-iKS4oMv50; path=/
+    - PHPSESSID=80aLiDN-JjbsCCA%2Cz3Ohk2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 14 Jun 2017 22:38:20 GMT
+recorded_at: Fri, 16 Jun 2017 01:57:25 GMT
