--- a/www.nass.gov.ng/33f057529263cc6b439afabcef8497aff6474bc8.yml
+++ b/www.nass.gov.ng/33f057529263cc6b439afabcef8497aff6474bc8.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 14 Jun 2017 22:53:56 GMT
+    - Fri, 16 Jun 2017 02:10:24 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=nYkd6ataLACKeSNGKIv-73; path=/
+    - PHPSESSID=9DDd3HbtUY%2CpN7ritr6-H3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 14 Jun 2017 22:53:56 GMT
+recorded_at: Fri, 16 Jun 2017 02:10:24 GMT
