--- a/www.nass.gov.ng/a1b709ed4ecb4e5e1b2d1fbff2083029dadfb3f2.yml
+++ b/www.nass.gov.ng/a1b709ed4ecb4e5e1b2d1fbff2083029dadfb3f2.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 14 Jun 2017 22:55:44 GMT
+    - Fri, 16 Jun 2017 02:12:42 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=KogpN56%2C8w8Cv6H5TlQ1u2; path=/
+    - PHPSESSID=32jBoWZR3R8czn-wwHo%2C72; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 14 Jun 2017 22:55:44 GMT
+recorded_at: Fri, 16 Jun 2017 02:12:42 GMT
