--- a/www.nass.gov.ng/370e5efbb4a2787f5ac74d956ef22eb620205ad3.yml
+++ b/www.nass.gov.ng/370e5efbb4a2787f5ac74d956ef22eb620205ad3.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 14 Jun 2017 22:59:58 GMT
+    - Fri, 16 Jun 2017 02:16:05 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=uIKR1wNHmoa7O6jiSzqAr1; path=/
+    - PHPSESSID=5jbIAuFAebS%2CVVMAJbc4P2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 14 Jun 2017 22:59:58 GMT
+recorded_at: Fri, 16 Jun 2017 02:16:05 GMT
