--- a/www.nass.gov.ng/207a46d925fc4b4f5cbd9e7584ef3890bdefe634.yml
+++ b/www.nass.gov.ng/207a46d925fc4b4f5cbd9e7584ef3890bdefe634.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 14 Jun 2017 23:01:59 GMT
+    - Fri, 16 Jun 2017 02:18:12 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=uPVdG2aTZVP1d2hZMm6Pr3; path=/
+    - PHPSESSID=iG2-1emTOGcL27818Plc%2C0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 14 Jun 2017 23:01:59 GMT
+recorded_at: Fri, 16 Jun 2017 02:18:12 GMT
